HTML page added

--- a/src/app/html/html.component.html
+++ b/src/app/html/html.component.html
@@ -1,1 +1,55 @@
-<p>html works!</p>
+<header class="container">
+    <h1>
+        HTML</h1>
+    <h2><em>HyperText Markup Language=hiperszöveges jelölőnyelv</em></h2>
+</header>
+<main class="container">
+    <article>
+        <p>Univerzális leíró nyelv weboldalak és webes alkalmazások elkészítéséhez. Mára már internetes szabvánnyá vált a W3C (World Wide Web Consortium) támogatásával.</p>
+        <p>HTML általában szöveges állományokban található meg olyan számítógépeken, melyek az internethez kapcsolódnak. Ezek az állományok tartalmazzák azokat a szimbólumokat, amelyek a megjelenítő programnak leírják, hogyan is kell megjeleníteni illetve
+            feldolgozni az adott állomány tartalmát. </p>
+        <div><strong>Megjelenítő programok:</strong>
+            <ul>
+                <li>webböngésző,</li>
+                <li>aural böngésző,</li>
+                <li>braille olvasó,</li>
+                <li>levelező program,</li>
+                <li>egyéb eszközök (pl. mobiltelefon)</li>
+            </ul>
+        </div>
+    </article>
+    <article>
+        <div><strong>A HTML leíró elemei (szimbólumai):</strong>
+            <ul>
+                <li><em>strukturális elemek:</em> leírják az adott szöveg "célját" (címsor, bekezdés)</li>
+                <li><em>prezentációs szimbólumok:</em> leírják, hogy az adott szöveg hogyan nézzen ki (például vastagon legyen szedve).<br>(Megj: Ez a forma azonban ma már elavultnak számít, helyette a
+                    <a href="/css">CSS</a> használata javasolt.)</li>
+                <li><em>hiperszöveg (hypertext) elemek:</em> segítségükkel kapcsolat létesíthető a dokumentum egyes elemei és más dokumentumok között</li>
+                <li><em>eszköz elemek:</em> segítségükkel gombok, listák, beviteli mezők hozhatók létre.</li>
+            </ul>
+        </div>
+    </article>
+    <article>
+        <div><strong>HTML állomány felépítése</strong><br>Egy HTML állomány három fő részre bontható:
+            <ul>
+                <li>A <em>Dokumentum Típus Definíció</em> az állomány legelején,</li>
+                <li>a <em>HTML fejléc</em>, ami technikai és dokumentációs adatokat tartalmaz, amelyeket az internet böngésző nem jelenít meg, tehát átlag felhasználó ezeket nem látja és</li>
+                <li>a <em>HTML törzs</em>, amely a megjelenítendő információkat tartalmazza.</li>
+            </ul>
+        </div>
+    </article>
+    <article>
+        <div><strong>Szemantikai elemek a weboldalon</strong>
+            <div>
+                <p>A szemantikai elemek használatával az internetes tartalmat szüntelenül kategorizáló és kereső algoritmusoknak nyújtunk segítséget, hogy könnyebben beazonosítsa az elemeket az oldalon.</p>
+                <p>Ma egy alap szemantikai felépítés így néz ki:</p>
+                <div><img src="https://www.w3schools.com/html/img_sem_elements.gif" alt="">
+                    <p>Forrás: W3C</p>
+                </div>
+            </div>
+        </div>
+    </article>
+
+
+</main>
+<footer class="container"><em>Forrás: Wikipédia</em></footer>
