--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,24 @@
-<p>Hello</p>
+<header class="header">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a routerLink="" class="navbar-brand">HTML</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a routerLink="css" class="nav-link active" aria-current="page">CSS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a routerLink="bootstrap" class="nav-link active" aria-current="page">Bootstrap</a>
+                    </li>
+                    <li class="nav-item">
+                        <a routerLink="javascript" class="nav-link active" aria-current="page">JavaScript</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+</header>
