--- a/src/app/html/html.component.html
+++ b/src/app/html/html.component.html
@@ -49,7 +49,22 @@
             </div>
         </div>
     </article>
+    <article>
+        <div><strong>SEO, a weboldal keresőoptimalizálása</strong><br><em>Search Engine Optimization</em>
+            <div>
+                <p>5 fő elem csoport van egy weboldal html tartalmában, amivel mi fejlesztők támogatni tudjuk a weboldalunk készítésekor a SEO-t:
+                </p>
+                <ul>
+                    <li>Title (cím)</li>
+                    <li>URL</li>
+                    <li>Content (Tartalom)</li>
+                    <li>Headings (Fejlécek)</li>
+                    <li>Images (Képek)</li>
+                </ul>
+            </div>
+        </div>
+    </article>
 
 
 </main>
-<footer class="container"><em>Forrás: Wikipédia</em></footer>
+<footer class="container"><em>Forrás: Wikipédia, W3C</em></footer>
