--- a/src/app/javascript/javascript.component.css
+++ b/src/app/javascript/javascript.component.css
@@ -10,11 +10,10 @@ h3 {
 
 #buttons {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 #buttons button {
-    width: 10%;
     margin: 1%;
 }
 
@@ -30,4 +29,19 @@ h3 {
     margin-top: 2%;
     font-size: larger;
     font-weight: 600;
+}
+
+@media only screen and (min-width: 576px) {
+    #buttons {
+        display: inline-block;
+    }
+    #buttons button {
+        margin: 1%;
+    }
+    #text {
+        border: solid 1px;
+        border-radius: 10px;
+        padding: 2%;
+        text-align: justify;
+    }
 }
