--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,8 @@
-<p>page-not-found works!</p>
+<header class="container">
+    <h1>Oooops! Page not found!</h1>
+</header>
+<main class="container">
+    <div>
+        <img src="https://images.unsplash.com/photo-1601724161617-928285222d5b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="PAGE NOT FOUND">
+    </div>
+</main>
